<resources>
    <string name="app_name">Drealitym</string>
    <string name="add_dream_title">ADD DREAM</string>
    <string name="add_dream_edit_text_head">Write down your dream &#8230;</string>
    <string name="add_dream_edit_text_title">Dream title</string>
    <string name="toast_empty">Please enter a title</string>
    <string name="toast_not_empty">Entry saved</string>
    <string name="reminders_activate_alarm">Turn on alarm in general</string>


    <string-array name="dream_type_spinner_array">
        <item>normal dream</item>
        <item>pre-lucid dream</item>
        <item>lucid dream</item>
    </string-array>


    <string-array name="lv_title_days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>



    <!--REMINDERS_FRAGMENT-->
    <string name="reminders_fragment_day_monday">Monday</string>
    <string name="reminders_fragment_day_tuesday">Tuesday</string>
    <string name="reminders_fragment_day_wednesday">Wednesday</string>
    <string name="reminders_fragment_day_thursday">Thursday</string>
    <string name="reminders_fragment_day_friday">Friday</string>
    <string name="reminders_fragment_day_sunday">Sunday</string>
    <string name="reminders_fragment_day_saturday">Saturday</string>

    <string name="reminders_fragment_name_text">CREATE REMINDER</string>

    <string-array name="reminders_fragment_spinner_array">
        <item>20 min</item>
        <item>40 min</item>
        <item>1 hour</item>
        <item>2 hour</item>
        <item>3 hour</item>
        <item>4 hour</item>
        <item>5 hour</item>
        <item>6 hour</item>
        <item>7 hour</item>
        <item>8 hour</item>
    </string-array>

    <!--NUMBER_PICKER STRING ARRAY-->
    <string-array name="dialog_number_picker_strings">
        <item>normal</item>
        <item>pre-lucid</item>
        <item>lucid</item>
    </string-array>
    <string name="dialog_number_picker_title">Lucid Dream ?</string>
    <string name="dialog_number_picker_message">Choose clarity of your dream..</string>





    <!--APP_BLUEPRINT_ACTIVITY-->
    <string name="blueprint_activity_channel2_description">This channel reminds you to read your dreams</string>


    <!--FRAGMENT DREAM DIALOG-->
    <string name="fragment_dream_dialog_dream_title">DREAM TITLE</string>
    <string name="fragment_dream_dialog_dream_text">DREAM TEXT</string>
    <string name="fragment_dream_dialog_add_audio">ADD AUDIO FILE</string>
    <string name="fragment_dream_dialog_text_hint">Here you can start typing your dream...</string>



</resources>
