<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#440053">

    <TextView
        android:id="@+id/reminders_fragment_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/reminders_fragment_name_text"
        android:textSize="20dp"
        android:textColor="#fff"
        android:gravity="center_horizontal"/>

    <EditText
        android:id="@+id/reminder_fragment_edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reminders_fragment_name_text_view"
        android:backgroundTint="#fff"
        />


    <LinearLayout
        android:layout_below="@+id/reminder_fragment_edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:id="@+id/reminder_fragment_linearlayout_left"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ToggleButton
                android:id="@+id/reminder_fragment_button_monday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textOff="@string/reminders_fragment_day_monday"
                android:textOn="@string/reminders_fragment_day_monday"
                android:background="@drawable/reminders_fragment_day_button"/>

            <ToggleButton
                android:id="@+id/reminder_fragment_button_tuesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textOff="@string/reminders_fragment_day_tuesday"
                android:textOn="@string/reminders_fragment_day_tuesday"
                android:background="@drawable/reminders_fragment_day_button"/>

            <ToggleButton

                android:id="@+id/reminder_fragment_button_wednesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"

                android:textSize="18sp"
                android:textAlignment="center"
                android:textOff="@string/reminders_fragment_day_wednesday"
                android:textOn="@string/reminders_fragment_day_wednesday"
                android:background="@drawable/reminders_fragment_day_button"/>

            <ToggleButton
                android:id="@+id/reminder_fragment_button_thursday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textOff="@string/reminders_fragment_day_thursday"
                android:textOn="@string/reminders_fragment_day_thursday"
                android:background="@drawable/reminders_fragment_day_button"/>






        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >



            <ToggleButton
                android:id="@+id/reminder_fragment_button_friday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textOff="@string/reminders_fragment_day_friday"
                android:textOn="@string/reminders_fragment_day_friday"
                android:background="@drawable/reminders_fragment_day_button"/>

            <ToggleButton
                android:id="@+id/reminder_fragment_button_saturday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textOff="@string/reminders_fragment_day_saturday"
                android:textOn="@string/reminders_fragment_day_saturday"
                android:background="@drawable/reminders_fragment_day_button"/>

            <ToggleButton
                android:id="@+id/reminder_fragment_button_sunday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textOff="@string/reminders_fragment_day_sunday"
                android:textOn="@string/reminders_fragment_day_sunday"
                android:background="@drawable/reminders_fragment_day_button"/>







        </LinearLayout>



    </LinearLayout>




</RelativeLayout>