<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_shape_lila"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        style="@style/DreamCardStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fragment_dream_dialog_tv_header"
                style="@style/AppTheme.DarkLila"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center_horizontal"
                android:textSize="24sp"
                tools:text="ADD DREAM" />


            <androidx.cardview.widget.CardView
                style="@style/DreamCardStyle.Subitem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/fragment_dream_dialog_tv_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:textColor="#fff"
                        android:textSize="16sp"
                        android:text="@string/fragment_dream_dialog_dream_title"
                        tools:text="DREAM TITLE"/>


                    <EditText
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/fragment_dream_dialog_tv_title"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:backgroundTint="#fff"/>


                </RelativeLayout>




            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/DreamCardStyle.Subitem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/fragment_dream_dialog_tv_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:textColor="#fff"
                        android:textSize="16sp"
                        android:text="@string/fragment_dream_dialog_dream_text"
                        tools:text="DREAM TEXT"/>


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="232dp"
                        android:layout_below="@+id/fragment_dream_dialog_tv_text"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:backgroundTint="#fff"
                        android:gravity="top|start"
                        android:textColor="#fff"
                        android:textColorHint="#D8D8D8"
                        android:hint="@string/fragment_dream_dialog_text_hint"
                        tools:text="Here you can start typing your dream..."/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                style="@style/DreamCardStyle.Subitem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp">

                <FrameLayout
                    android:id="@+id/fragment_dream_dialog_audio_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                </FrameLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>



    </androidx.cardview.widget.CardView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>